--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,12 +86,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # Assets
-  assets:
-    - assets/images/
-    - assets/icons/
-    - assets/animations/
-    - assets/fonts/
+  # Assets (removed unused asset folders)
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
