--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,7 +95,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # Assets (removed unused asset folders)
+  # Assets
+  assets:
+    - assets/waves.jpg
+    - assets/trophy.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
