--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: bagrz_app
+name: bagr_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -83,6 +83,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -99,10 +100,6 @@ flutter:
   assets:
     - assets/
     - assets/images/
-    - assets/animations/
-    - assets/icons/
-    - assets/rive/
-    - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -129,3 +126,25 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+# Flutter Launcher Icons configuration
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/icon.jpeg"
+  min_sdk_android: 21
+  # Use adaptive icons for better cropping control
+  adaptive_icon_background: "#000000"
+  adaptive_icon_foreground: "assets/images/icon.jpeg"
+  web:
+    generate: true
+    image_path: "assets/images/icon.jpeg"
+    background_color: "#000000"
+    theme_color: "#000000"
+  windows:
+    generate: true
+    image_path: "assets/images/icon.jpeg"
+    icon_size: 48
+  macos:
+    generate: true
+    image_path: "assets/images/icon.jpeg"
